# mtid

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  SPECS.md  build.rs
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml  test.yml
examples/caretta-id-cli/: Cargo.toml  README.md
examples/caretta-id-cli/src/: main.rs
examples/caretta-id-cli/src/cli/: decode.rs  encode.rs  generate.rs  length_option.rs  mod.rs
examples/caretta-id-cli/tests/: decode.rs  encode.rs  generate.rs
examples/caretta-id-prost-example/: Cargo.toml  build.rs
examples/caretta-id-prost-example/proto/: caretta_id_example.proto
examples/caretta-id-prost-example/src/: lib.rs
examples/mtid-cli/: Cargo.toml  README.md
examples/mtid-cli/src/: main.rs
examples/mtid-cli/src/cli/: args.rs  decode.rs  encode.rs  generate.rs  length_option.rs  mod.rs
examples/mtid-cli/tests/: decode.rs  encode.rs  generate.rs
examples/mtid-prost-example/: Cargo.toml  build.rs
examples/mtid-prost-example/proto/: mtid_example.proto
examples/mtid-prost-example/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: arbitrary_double.rs  arbitrary_dtid.rs  arbitrary_qtid.rs  arbitrary_quadruple.rs  arbitrary_single.rs  arbitrary_stid.rs  arbitrary_triple.rs  arbitrary_ttid.rs  dtid_parse_str.rs  parse_int.rs  parse_str.rs  qtid_parse_str.rs  stid_parse_str.rs  ttid_parse_str.rs
fuzz/fuzz_targets/macros/: mod.rs
proto/tripod_id/: double.proto  dtid.proto  single.proto  stid.proto  triple.proto  ttid.proto
src/: alphabet.rs  arbitrary.rs  caretta_id.rs  common.rs  double.rs  dtid.rs  error.rs  lib.rs  macros.rs  prost.rs  proto.rs  qtid.rs  rand.rs  redb.rs  rusqlite.rs  sea_orm.rs  serde.rs  single.rs  stid.rs  triple.rs  ttid.rs  utils.rs
src/double/: mod.rs  rusqlite.rs  sea_orm.rs
src/dtid/: mod.rs  rusqlite.rs  sea_orm.rs
src/prost/: double.rs  dtid.rs  mod.rs  qtid.rs  single.rs  stid.rs  triple.rs  ttid.rs
src/proto/: dtid.rs  mod.rs  qtid.rs  stid.rs  ttid.rs
src/qtid/: mod.rs  rusqlite.rs  sea_orm.rs
src/quadruple/: mod.rs  rusqlite.rs  sea_orm.rs
src/sea_orm/: double.rs  dtid.rs  mod.rs  qtid.rs  single.rs  stid.rs  triple.rs  ttid.rs
src/single/: mod.rs  rusqlite.rs  sea_orm.rs
src/stid/: mod.rs  rusqlite.rs  sea_orm.rs
src/triple/: mod.rs  rusqlite.rs  sea_orm.rs
src/triplet/: error.rs  mod.rs
src/ttid/: mod.rs  rusqlite.rs  sea_orm.rs
tests/: default.rs  double.rs  dtid.rs  no_std.rs  prost.rs  qtid.rs  rand.rs  redb.rs  sea_orm.rs  serde.rs  single.rs  stid.rs  triple.rs  ttid.rs
tests/common/: mod.rs
tests/macros/: mod.rs
tests/validator/: mod.rs
