[package]
name = "mtid"
edition.workspace = true
version.workspace = true
description = "Multi-length triplet id: Human-friendly id for personal distributed system"
categories = ["data-structures", "encoding"]
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/mtid"
readme = "README.md"

[features]
default=[]
prost = ["dep:prost", "dep:prost-build"]
rusqlite = ["dep:rusqlite"]
sea-orm = ["dep:sea-orm"]
serde = ["dep:serde"]

[dependencies]
prost = { version = "0.14.1", optional = true }
rand.workspace = true
rusqlite = { version = "0.37.0" , optional = true }
sea-orm = { version = "1.1.16", default-features = false, optional = true }
serde = { version = "1.0.219", optional = true }
thiserror = "2.0.12"

[build-dependencies]
prost-build = { version = "0.14.1", optional = true }

[dev-dependencies]
serde_test = "1.0.177"
serde = { version = "1.0.219", default-features = false, features = ["derive"]}
sea-orm = { version = "1.1.16", default-features = false, features = ["macros", "mock"]}
tokio = { version = "1.47.1", default-features = false, features = ["macros", "rt"] }

[workspace]
members = [".", "examples/mtid-cli"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fluo10/mtid"
homepage = "https://github.com/fluo10/mtid"
keywords = ["id", "identifier", "uuid", "distributed", "human-readable"]
version = "0.1.0"

[workspace.dependencies]
rand = "0.8.5"
