[package]
name = "mtid"
edition.workspace = true
version.workspace = true
description = "Multi-length triplet id: Human-friendly id for personal distributed system"
categories = ["data-structures", "encoding", "no-std", "no-std::no-alloc"]
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/mtid"
readme = "README.md"
exclude = ["/.github", "/.gitignore", "/.vscode", "/CHANGELOG.md", "/SPECS.md"]

[package.metadata.docs.rs]
all-features = true

[features]
default=["rand", "std"]
std = ["rand?/thread_rng",]
rand = ["dep:rand",]
arbitrary = ["std", "dep:arbitrary"]
prost = ["dep:prost", "dep:prost-build"]
rusqlite = ["std", "dep:rusqlite"]
sea-orm = ["std", "dep:sea-orm"]
serde = ["dep:serde"]

[dependencies]
arbitrary = { version = "1", optional = true}
prost = { version = "0.14.1", default-features = false, optional = true, features = ["derive"] }
rand = { workspace = true, default-features = false, optional = true }
rusqlite = { version = "0.37.0", default-features = false, optional = true }
sea-orm = { version = "1.1.16", default-features = false, optional = true }
serde = { version = "1.0.219", default-features = false, optional = true }

[build-dependencies]
prost-build = { version = "0.14.1", optional = true }

[dev-dependencies]
serde_test = "1.0.177"
serde = { version = "1.0.219", default-features = false, features = ["derive"]}
sea-orm = { version = "1.1.16", default-features = false, features = ["macros", "mock"]}
tokio = { version = "1.47.1", default-features = false, features = ["macros", "rt"] }
rand = { workspace = true, default-features = false, features = ["thread_rng"]}

[workspace]
members = [".", "examples/mtid-cli"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fluo10/mtid"
homepage = "https://github.com/fluo10/mtid"
keywords = ["id", "identifier", "uuid", "distributed", "human-readable"]
version = "0.2.1"

[workspace.dependencies]
rand = {version = "0.9.2", default-features = false}


