[package]
name = "caretta-id"
edition.workspace = true
version.workspace = true
description = "Random human-friendly id for personal distributed system"
categories = ["data-structures", "encoding", "no-std", "no-std::no-alloc"]
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/caretta-id"
readme = "README.md"
exclude = ["/.github", "/.gitignore", "/.vscode", "/CHANGELOG.md", "/SPECS.md", "/.gitmodules", "/.rustfmt.toml"]

[package.metadata.docs.rs]
all-features = true

[features]
default=["rand", "std"]
std = ["rand?/thread_rng",]
rand = ["dep:rand",]
arbitrary = ["std", "dep:arbitrary"]
prost = ["dep:prost"]
rusqlite = ["std", "dep:rusqlite"]
sea-orm = ["std", "dep:sea-orm"]
serde = ["dep:serde"]
redb = ["std", "dep:redb"]

[dependencies]
arbitrary = { version = "1", optional = true }
prost = { workspace = true, optional = true }
rand = { workspace = true, default-features = false, optional = true }
redb = { version = "3.1.0", optional = true }
rusqlite = { version = "0.37.0", default-features = false, optional = true }
sea-orm = { version = "1.1.16", default-features = false, optional = true }
serde = { version = "1.0.219", default-features = false, optional = true }
thiserror = { version = "2.0.12", default-features = false}

[build-dependencies]
prost-build.workspace = true

[dev-dependencies]
serde_test = "1.0.177"
serde = { version = "1.0.219", default-features = false, features = ["derive"]}
sea-orm = { version = "1.1.16", default-features = false, features = ["macros", "mock"]}
tokio = { version = "1.47.1", default-features = false, features = ["macros", "rt"] }
rand = { workspace = true, default-features = false, features = ["thread_rng"]}

[workspace]
members = [".", "examples/caretta-id-cli", "examples/caretta-id-prost-example"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fluo10/caretta-id"
homepage = "https://github.com/fluo10/caretta-id"
keywords = ["id", "identifier", "uuid", "distributed", "human-readable"]
version = "0.8.1"

[workspace.dependencies]
prost = { version = "0.14.1", default-features = false, features = ["derive"] }
prost-build = "0.14.1"
rand = {version = "0.9.2", default-features = false}