[package]
name = "mtid-cli"
edition.workspace = true
description = "Reference tool handling MTID, Multi-length Triplet ID"
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
mtid = { path = "../.." }
rand.workspace = true
