[package]
name = "mtid-prost-example"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
version.workspace = true
publish = false

[dependencies]
mtid = {path = "../..", features = ["prost"]}
prost.workspace = true

[build-dependencies]
prost-build.workspace = true

